@@ -10,6 +10,7 @@ Version
 - Fixed: Countries and shipping methods for payment modules are no longer mandatory
 - Fixed: Subdivisions for shipping modules should now work correctly
 - Fixed: Tax was not applied to flat price shipping
+- Fixed bug where the latest order did not appear in order history.
 
 Version 0.1.0 stable (2010-05-23)
 ------------------------------
